# spareshop_project

./: .env  README.md  pyproject.toml  spareshop.sql
app/: __init__.py
app/models/: BuyerAccountModel.py  ProductModels.py  ShopAccountModel.py  UserAccountModel.py
app/schemas/: ProductSchemas.py  ShopAccountSchemas.py  UserAccountSchemas.py
app/utils/: db.py  mysql_connector.py
app/views/: LoginView.py  ProductViews.py  ShopAccountViews.py  UserAccountViews.py
migrations/versions/: 38f5c04993f4_try_migration.py  a4e6b75cff2e_try_migration_2.py
